--- a/readme.org
+++ b/readme.org
@@ -1,7 +1,12 @@
 * ansible-drakvuf
-:bangbang: WIP :bangbang:
-Ansible role to deploy the black-box binary analysis system DRAKVUF on a host based on Ubuntu 20.04 from scratch.
-The role ~drakvuf-dev~ aims at installing a basic development environment for working on DRAKVUF.
+
+** :exclamation: Disclaimer
+This repository is work in progress, if you encounter any bugs or other problems, please report them.
+
+** Description
+This repository provides an Ansible playbook to deploy the black-box binary analysis system DRAKVUF on a host, which is based on Ubuntu 20.04 from scratch. (Debian Bullseye should work also, but has not been tested yet.)
+
+The role ~drakvuf-dev~ aims at installing a basic development environment for working on DRAKVUF. It follows the guide at [[drakvuf.com][https://drakvuf.com/]] and automates the commands mentioned there.
 
 ** Usage
 1. Insert the IP of your target machine to the inventory ~./inventory/hosts~ and make sure, that it is accessible via passwordless SSH.
@@ -11,9 +16,9 @@ The role ~drakvuf-dev~ aims at installing a basic development environment for wo
     ansible-playbook -i inventory/hosts playbooks/playbook.yml --ask-become-pass -vvv
     #+end_src
 
-4. Create your domU machine and start to use DRAKVUF.
-
-*Note*: This is work in progress, there will be bugs and problems!
+Afterwards you have to manual create your domU machine and create the corresponding Intermediate Symbol File (ISF), which is needed by libvmi and DRAKVUF to perform introspection. 
 
 
-
+** References
+[1] https://drakvuf.com/
+[2] https://pub.nethence.com/security/drakvuf
